# synthetic-financial-data

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: default.yaml  diffusion.yaml  timegan.yaml  vae_copula.yaml
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  04_visualization.ipynb
scripts/: download_data.py  evaluate.py  generate.py  train.py
src/synfin/: __init__.py
src/synfin/constraints/: __init__.py  ohlcv.py
src/synfin/data/: __init__.py  dataset.py  download.py  features.py  preprocess.py
src/synfin/evaluation/: __init__.py  metrics.py  privacy.py  statistical_tests.py  stylized_facts.py  tstr.py
src/synfin/models/: __init__.py
src/synfin/models/diffusion/: __init__.py  diffusion.py  noise_schedule.py  sampler.py  unet.py
src/synfin/models/timegan/: __init__.py  discriminator.py  embedder.py  generator.py  recovery.py  supervisor.py  timegan.py
src/synfin/models/vae_copula/: __init__.py  copula.py  decoder.py  encoder.py  vae.py
src/synfin/training/: __init__.py  callbacks.py  losses.py  trainer.py
src/synfin/utils/: __init__.py  config.py  device.py  logging.py  seed.py
src/synfin/visualization/: __init__.py  candlestick.py  correlations.py  distributions.py  time_series.py
tests/test_constraints/: test_ohlcv.py
tests/test_data/: test_download.py  test_features.py  test_preprocess.py
tests/test_evaluation/: test_metrics.py
tests/test_models/: test_diffusion.py  test_timegan.py  test_vae_copula.py
