[metadata]
name = synfin
version = 0.1.0
description = Synthetic Financial Data Generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = synfin contributors
url = https://github.com/AndrewFSee/synthetic-financial-data
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0
    numpy>=1.24
    pandas>=2.0
    pyarrow>=12.0
    yfinance>=0.2
    scikit-learn>=1.3
    scipy>=1.11
    matplotlib>=3.7
    mplfinance>=0.12.9b0
    seaborn>=0.12
    plotly>=5.15
    pyyaml>=6.0
    tensorboard>=2.13
    tqdm>=4.65
    ta>=0.11
    statsmodels>=0.14

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4
    pytest-cov>=4.1
    black>=23.0
    isort>=5.12
    flake8>=6.1
    jupyter>=1.0
    ipykernel>=6.25

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,.venv,build,dist

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
